[project]
name = "sunpanel-teleport-bridge"
version = "0.1.0"
description = "Sync SunPanel web cards to Teleport dynamic app resources."
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.2",
  "requests>=2.32.0",
]

[project.scripts]
sunpanel-teleport-bridge = "sunpanel_teleport_bridge.__main__:main"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
